--- a/Tasks/package.json
+++ b/Tasks/package.json
@@ -2,12 +2,18 @@
   "name": "tasks",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type":"module",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+
+     "dev":"nodemon server.js",
+     "start":"node server.js"
+
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
