--- a/Tasks/package.json
+++ b/Tasks/package.json
@@ -5,15 +5,15 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-
-     "dev":"nodemon server.js",
-     "start":"node server.js"
-
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "nodemon": "^3.1.10"
   }
 }
